--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axois": "0.0.1-security",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint": "^6.4.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "sequelize": "^5.19.1",
+    "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.0"
   }
 }
